minor link fixes and remove resume button on mobile nav

--- a/src/components/Home.module.scss
+++ b/src/components/Home.module.scss
@@ -47,7 +47,7 @@
   animation: appear 1.5s ease;
 }
 
-.buttonWrapper a {
+.buttonWrapper button {
   animation: appear 2s ease;
 }
 
